プロジェクト名からハイフンとアンダーバーを除去するのを廃止